--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.cdnfonts.com/css/sf-pro-display");
+@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
 
 body {
   margin: 0;
-  font-family: "SF Pro Display", SF Pro Icons, Helvetica Neue, Helvetica, Arial,
+  font-family: 'SF Pro Display', SF Pro Icons, Helvetica Neue, Helvetica, Arial,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,7 +11,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -297,7 +297,7 @@ nav .link-styled {
   align-items: center;
   animation-name: fadeOut;
   animation-duration: 0.3s;
-  animation-delay: 3s;
+  animation-delay: 5s;
   animation-fill-mode: forwards;
   pointer-events: none;
 }
